kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-tracker

spec:
  replicas: 1

  selector:
    matchLabels:
      app: task-tracker

  template:
    metadata:
      labels:
        app: task-tracker

    spec:
      containers:
        - name: task-tracker

          image: image-registry.openshift-image-registry.svc:5000/demo/task-tracker:latest

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: task-tracker
spec:
  selector:
    app: task-tracker

  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: task-tracker

spec:
  to:
    kind: Service
    name: task-tracker

  port:
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16

          ports:
            - containerPort: 5432

          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data

      volumes:
        - name: postgres-data
          emptyDir: {}
---

apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
